--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -9,7 +9,7 @@
 
   /* change the values below to your chosen font(s) */
   --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --paragraph-font: Poppins, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #6C83B6;  /* headlines on a white background */ 
