--- a/styles/home-style.css
+++ b/styles/home-style.css
@@ -8,8 +8,8 @@
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Poppins, Helvetica, sans-serif;
+  --heading-font: "Poppins";
+  --paragraph-font: "Poppins", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #6C83B6;  /* headlines on a white background */ 
