--- a/wdd130/wwr/styles/site-plan-rafting.css
+++ b/wdd130/wwr/styles/site-plan-rafting.css
@@ -1,27 +1,27 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rajdhani:wght@500&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #6C83B6   ;
-  --secondary-color: #0B1032 ;
-  --accent1-color: #D4F5F5;
-  --accent2-color: white;
+  --primary-color: #03045e   ;
+  --secondary-color: #0077b6 ;
+  --accent1-color: #00b4d8;
+  --accent2-color: #90e0ef;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon";
-  --paragraph-font: Lato, Helvetica, sans-serif;
+  --heading-font: Poppins;
+  --paragraph-font: Rajdhani, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #6C83B6;  /* headlines on a white background */ 
+  --headline-color-on-white: #03045e;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #6C83B6; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #0077b6; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #6C83B6  ;
+  --paragraph-background-color: #00b4d8  ;
   --nav-link-color: black;
-  --nav-background-color: #6C83B6;
+  --nav-background-color: #0077b6;
   --nav-hover-link-color: white;
   --nav-hover-background-color: #0B1032;
 }
