--- a/wdd130/wwr/styles/site-plan-rafting.css
+++ b/wdd130/wwr/styles/site-plan-rafting.css
@@ -11,8 +11,8 @@ Fonts are separated by a & */
   --accent2-color: #90e0ef;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: Poppins;
-  --paragraph-font: Rajdhani, Helvetica, sans-serif;
+  --heading-font: "Poppins";
+  --paragraph-font: "Rajdhani", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #03045e;  /* headlines on a white background */ 
