--- a/wdd130/wwr/styles/main.css
+++ b/wdd130/wwr/styles/main.css
@@ -24,7 +24,9 @@
 }
 
 /* modifyable CSS */
-
+html {
+  padding: 0;
+}
 nav {
     top: 0;
     list-style-type: none;
@@ -73,9 +75,10 @@ nav {
     cursor: pointer;
 }
 .join {
-    background-color: var(--accent1-color);
+    background-color: var(--accent2-color);
+    font-family: var(--paragraph-font);
     border: none;
-    color: white;
+    color: black;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
@@ -102,6 +105,21 @@ table {
     color: var(--paragraph-color-on-white);
     padding: 0;
   }
+div.para-right {
+  border: thin;
+  background-color: var(--accent1-color);
+  float: right;
+}
+div.para-left {
+  float: right;
+}
+footer p {
+  display: inline;
+}
+footer img {
+  width: 5%;
+  height: auto;
+}
 /* Page map */
 .sitemap {
     display: grid;
