--- a/wdd130/wwr/styles/main.css
+++ b/wdd130/wwr/styles/main.css
@@ -110,7 +110,7 @@ div.para-right {
   background-color: var(--accent1-color);
   float: right;
 }
-div.para-left {
+div.foot-right {
   float: right;
 }
 footer p {
