--- a/wdd130/wwr/styles/style.css
+++ b/wdd130/wwr/styles/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rajdhani:wght@500&display=swap');
 :root {
     /* Color palette */
     --primary-color: #03045e   ;
@@ -21,59 +22,80 @@
     --nav-hover-background-color: #0B1032;
   }
 
-#content {
-    max-width: 1600px;
-    margin: 0 auto;
-}
-nav a {
-    text-align: center;
-    color: white;
-}
-#hero-msg h1, #hero-msg h4 {
-    text-align: center;
-}
-.button-box {
-    text-align: center;
-}
+  /* selectors */
 main section {
     text-align: center;
 }
-#background {
-    height: 275px;
+header {
+    background-color: var(--primary-color);
 }
 body {
     background-color: white;
 }
-header {
-    background-color: var(--primary-color);
+nav a {
+    text-align: center;
+    color: white;
+    text-decoration: none;
 }
 nav a:hover {
     background-color: var(--accent2-color);
     color: black;
 }
-.book, .join {
-    background-color: var(--accent1-color);
-    color: var(--primary-color);
-}
-.book:hover, .join:hover {
-    background-color: var(--accent2-color);
+h4 {
     color: var(--secondary-color);
-}
-#background {
-    background-color: var(--secondary-color);
-}
-.msg {
-    background-color: var(--secondary-color);
 }
 footer {
     background-color: var(--primary-color);
     color: var(--accent2-color);
 }
+footer a {
+    color: var(--accent1-color);
+    text-decoration: none;
+}
+footer a:hover {
+    color: var(--accent2-color);
+}
+footer p {
+    font-size: 1.2em;
+}
+footer p a:hover {
+    text-decoration: underline;
+}
+
+/* IDs */
+#content {
+    max-width: 1600px;
+    margin: 0 auto;
+}
+#hero-msg h1, #hero-msg h4 {
+    text-align: center;
+}
+#hero-img {
+    width: 100%;
+}
+#background {
+    background-color: var(--secondary-color);
+    height: 275px;
+}
+
+/* classes */
+.button-box {
+    text-align: center;
+}
+.book, .join {
+    background-color: var(--accent1-color);
+    color: var(--primary-color);
+    text-decoration: none;
+}
+.book:hover, .join:hover {
+    background-color: var(--accent2-color);
+    color: var(--secondary-color);
+}
 .home-title {
     color: var(--primary-color);
 }
-h4 {
-    color: var(--secondary-color);
+.msg {
+    background-color: var(--secondary-color);
 }
 .msg h2 {
     color: var(--primary-color);
@@ -81,9 +103,16 @@ h4 {
 .msg p {
     color: black;
 }
-footer a {
-    color: var(--accent1-color);
+.logo {
+    width: 80px;
 }
-footer a:hover {
-    color: var(--accent2-color);
+.icon {
+    width: 80px;
 }
+
+
+/* Rounded social icons */
+/* 
+.social img {
+    border-radius: 50%;
+} */
