--- a/projects/styles/portfolio-style.css
+++ b/projects/styles/portfolio-style.css
@@ -40,6 +40,10 @@ footer {
     text-align: center;
     padding: 20px;
 }
+img {
+    width: 25vw;
+    height: auto;
+}
 
 /* Classes */
 .active {
