--- a/projects/styles/portfolio-style.css
+++ b/projects/styles/portfolio-style.css
@@ -9,8 +9,7 @@ body {
     font-family: var(--font-to-use);
     padding: 0;
     margin: 0;
-    height: 100vh;
-    width: 100vw;
+    text-decoration: none;
 }
 nav{
     top: 0;
@@ -44,6 +43,10 @@ img {
     width: 25vw;
     height: auto;
 }
+a {
+    text-decoration: none;
+    color: black;
+}
 
 /* Classes */
 .active {
@@ -52,7 +55,6 @@ img {
 }
 .flex-container {
     margin: 8px 0px;
-    width: 100vw;
     height: auto;
     display: flex;
     flex-flow: row wrap;
