--- a/projects/styles/portfolio-style.css
+++ b/projects/styles/portfolio-style.css
@@ -36,8 +36,7 @@ footer {
     color: white;
     background-color: black;
     bottom: 0;
-    text-align: center;
-    padding: 20px 0px;
+    /* padding: 20px; */
 }
 img {
     width: 25vw;
@@ -46,6 +45,17 @@ img {
 a {
     text-decoration: none;
     color: black;
+}
+footer a {
+    color: white;
+}
+footer .social img {
+    height: 40px;
+    width: auto;
+    padding: 10px;
+    margin: 0 10px;
+    border-style: solid;
+    border-radius: 10px;
 }
 
 /* Classes */
@@ -70,4 +80,45 @@ a {
     display: inline;
     padding-left: 10px;
     text-align: left;
+}
+.information {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+}
+.address {
+    display: flex;
+    height: auto;
+    grid-area: 1/1/1/1;
+}
+.phone {
+    display: flex;
+    grid-area: 2/1/2/1;
+}
+.email {
+    display: flex;
+    grid-area: 3/1/3/1;
+}
+.about {
+    grid-area: 1/2/3/2;
+    padding: 3vw;
+}
+.social {
+    padding-left: 30px;
+}
+
+/* DO NOT MESS WITH THIS */
+.icon {
+    margin-left: 10vw;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 2vw;
+    border-radius: 50%;
+    border-style: solid;
+    font-size: 2em;
+    padding: 10px;
+}
+.address div, .phone p, .email p {
+    margin-top: auto;
+    margin-bottom: auto;
 }
