--- a/projects/styles/portfolio-style.css
+++ b/projects/styles/portfolio-style.css
@@ -61,6 +61,7 @@ footer .social img {
 /* Classes */
 .active {
     color: black;
+    font-weight: bold;
     background-color: red;
 }
 .flex-container {
@@ -75,6 +76,7 @@ footer .social img {
     text-align: center;
     padding: 15px;
     border-style: double;
+    margin: 2px;
 }
 .description {
     display: inline;
