--- a/styles/style.css
+++ b/styles/style.css
@@ -5,27 +5,31 @@
   /* colors */
   --primary-color: #03045e;
   --secondary-color: #0077b6;
+  --tertiary-color: #00b4d8;
   --accent1-color: #00b4d8;
   --accent2-color: #90e0ef;
+  --alt1-color: white;
+  --alt2-color: black;
+  --alt3-color: rgb(136, 136, 136);
 
   /* fonts */
   --heading-font: "Poppins";
   --paragraph-font: "Rajdhani", Helvetica, sans-serif;
 
   /* colors from palette */
-  --headline-color-on-white: #03045e;  /* headlines on a white background */ 
-  --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #0077b6; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #00b4d8  ;
-  --nav-link-color: black;
-  --nav-background-color: #0077b6;
-  --nav-hover-link-color: white;
-  --nav-hover-background-color: #0B1032;
+  --headline-color-on-white: var(--primary-color);  /* headlines on a white background */ 
+  --headline-color-on-color: var(--alt1-color); /* headlines on a colored background */ 
+  --paragraph-color-on-white: var(--secondary-color); /* paragraph text on a white background */ 
+  --paragraph-color-on-color: var(--alt1-color); /* paragraph text on a colored background */ 
+  --paragraph-background-color: var(--tertiary-color);
+  --nav-link-color: var(--alt2-color);
+  --nav-background-color: var(--secondary-color);
+  --nav-hover-link-color: var(--alt1-color);
+  --nav-hover-background-color: var(--alt2-color);
 
   /* Customized colors */
-  --background-coloration: white;
-  --nav-hover: rgb(136, 136, 136);
+  --background-coloration: var(--alt1-color);
+  --nav-hover: var(--alt3-color);
 }
 
 body {
@@ -53,7 +57,7 @@ li {
 }
 li a {
   display: block;
-  color: white;
+  color: var(--alt1-color);
   padding: 14px 16px;
   text-decoration: none;
 }
@@ -66,14 +70,14 @@ li a:hover {
 /* style dropdown content */
 li a, .dropbtn {
   display: inline-block;
-  color: white;
+  color: var(--alt1-color);
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-  background-color: rgb(136, 136, 136);
+  background-color: var(--alt3-color);
 }
 
 li.dropdown {
@@ -85,14 +89,14 @@ li.dropdown {
   margin: 0;
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: var(--alt1-color);
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
 .dropdown-content a {
-  color: black;
+  color: var(--alt2-color);
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -154,21 +158,62 @@ p.colored {
   height: 100px;
 }
 /* Footer */
-footer { 
-  background-color: var(--accent1-color);
-  bottom:0;
-  width: 100%;
-  text-align: center;
-  position: sticky;
-}
-  footer div, footer p {
-  background-color: var(--accent1-color);
-  margin: 0;
-  padding: 5px;
-
-}
-.social img {
-  margin: 5px;
-  height: 50px;
+footer {
+  color: var(--alt1-color);
+  background-color: var(--nav-background-color);
+  bottom: 0;
   width: auto;
+  padding: 20px;
+}
+footer a {
+  color: var(--alt1-color);
+}
+footer .social img {
+  height: 40px;
+  width: auto;
+  padding: 10px;
+  margin: 0 10px;
+  border-style: solid;
+  border-radius: 10px;
+}
+.information {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+.address {
+  display: flex;
+  height: auto;
+  grid-area: 1/1/1/1;
+}
+.phone {
+  display: flex;
+  grid-area: 2/1/2/1;
+}
+.email {
+  display: flex;
+  grid-area: 3/1/3/1;
+}
+.about {
+  grid-area: 1/2/3/2;
+  padding: 3vw;
+}
+.social {
+  padding-left: 30px;
+}
+
+/* DO NOT MESS WITH THIS */
+.icon {
+  margin-left: 10vw;
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 2vw;
+  border-radius: 50%;
+  border-style: solid;
+  font-size: 2em;
+  padding: 10px;
+}
+.address div, .phone p, .email p {
+  margin-top: auto;
+  margin-bottom: auto;
 }
