--- a/wdd130/burglocales/styles/site-plan.css
+++ b/wdd130/burglocales/styles/site-plan.css
@@ -11,7 +11,7 @@ Fonts are separated by a | */
   --accent2-color: #f61067;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "IM Fell French Canon SC";
+  --heading-font: "Ra";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
