--- a/wdd130/wwr/styles/style.css
+++ b/wdd130/wwr/styles/style.css
@@ -216,32 +216,40 @@ main section img {
     border-radius: 10px;
 }
 
-/* rivers page */
+/* ====================================== rivers page ====================================== */
 .rivers-grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 45px; 
+    margin: 0 50px;
 }
 .river-title {
     grid-column: 1/-1;
+    text-align: center;
 }
 #salmon-img {
-    grid-column: 3/4;
+    grid-column: 1/2;
 }
 .salmon {
-    /* grid-column: 1/3; */
+    text-align: left;
+    grid-column: 2/4;
 }
 #desolation-img {
-    grid-columnu: 3/4;
+    grid-column: 3/4;
 }
 .desolation {
+    text-align: left;
     grid-column: 1/3;
+    grid-row: 3/4;
 }
 #grand-img {
-    grid-column: 3/4;
-    grid-row: 3;
+    grid-column: 1/2;
+    grid-row: 4;
 }
 .grand {
-    grid-column: 1/3;
+    text-align: left;
+    grid-column: 2/4;
+    grid-row: 4;
 }
 
 @media screen and (max-width: 900px) {
