--- a/wdd130/burglocales/styles/site-plan.css
+++ b/wdd130/burglocales/styles/site-plan.css
@@ -1,7 +1,7 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a | */
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
@@ -11,7 +11,7 @@ Fonts are separated by a | */
   --accent2-color: #f61067;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Ra";
+  --heading-font: "Source Sans Pro";
   --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
@@ -26,6 +26,9 @@ Fonts are separated by a | */
   --nav-hover-background-color: #f61067;
 }
 
+.imager {
+  max-width: 300px;
+}
 
 /*  Look around below...but DON'T CHANGE ANYTHING! */
 
