--- a/wdd130/burglocales/styles/style.css
+++ b/wdd130/burglocales/styles/style.css
@@ -122,3 +122,85 @@ main.home div a {
     text-align: center;
     font-weight: bold;
 }
+
+/* Modal on Contact Us page */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The Close Button */
+  .close {
+    color: var(--accent1-color);
+    padding: 5px;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    background-color: var(--accent1-color);
+    padding: 5px;
+    border-radius: 10px;
+    color: var(--accent2-color);
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+/* Modal Header */
+.modal-header {
+    padding: 2px 16px;
+    text-align: center;
+    background-color: var(--accent2-color);
+    color: var(--accent1-color);
+
+  }
+  
+  /* Modal Body */
+  .modal-body {padding: 20px; text-align: center;}
+  
+  /* Modal Footer */
+  .modal-footer {
+    padding: 2px 16px;
+    background-color: var(--accent2-color);
+    color: var(--accent1-color);
+    text-align: center;
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 80%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  
+  /* Add Animation */
+  @keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+  }
