--- a/wdd130/burglocales/styles/style.css
+++ b/wdd130/burglocales/styles/style.css
@@ -123,6 +123,36 @@ main.home div a {
     font-weight: bold;
 }
 
+/* Subpages */
+main.sub {
+    display: grid;
+    grid-template-columns: repeat(9, 1fr);
+    margin: 0 30px;
+}
+main.sub h1 {
+    grid-column: 1/10;
+    text-align: center;
+}
+main.sub img {
+    grid-column: span 5;
+    margin: 30px 0;
+}
+main.sub div {
+    grid-column: span 4;
+    margin: 30px 0 30px 30px;
+}
+main.sub img:nth-of-type(2) {
+    grid-column: -1/-5;
+}
+main.sub div:nth-of-type(2) {
+    grid-row: 3;
+    grid-column: 1/6;
+    padding-right: 30px;
+}
+main.sub div:nth-of-type(2) h3, main.sub div:nth-of-type(2) p {
+    text-align: right;
+}
+
 /* Modal on Contact Us page */
 /* The Modal (background) */
 .modal {
