--- a/wdd130/burglocales/styles/style.css
+++ b/wdd130/burglocales/styles/style.css
@@ -153,6 +153,31 @@ main.sub div:nth-of-type(2) h3, main.sub div:nth-of-type(2) p {
     text-align: right;
 }
 
+/* Contact Us */
+main.contact {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+main.contact h1 {
+    grid-column: span 5;
+    text-align: center;
+}
+#feedback {
+    display: block;
+    grid-column: 2/4;
+    text-align: center;
+    padding: 30px;
+    margin: 30px;
+}
+form {
+    border: 3px solid black;
+    border-radius: 10px;
+}
+#feedback div {
+    padding: 10px;
+    font-family: var(--paragraph-font);
+}
+
 /* Modal on Contact Us page */
 /* The Modal (background) */
 .modal {
