--- a/styles/style.css
+++ b/styles/style.css
@@ -1,219 +1,170 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Rajdhani:wght@500&display=swap');
-/* color palette: https://coolors.co/palette/03045e-0077b6-00b4d8-90e0ef-caf0f8 */
-
-:root {
-  /* colors */
-  --primary-color: #03045e;
-  --secondary-color: #0077b6;
-  --tertiary-color: #00b4d8;
-  --accent1-color: #00b4d8;
-  --accent2-color: #90e0ef;
-  --alt1-color: white;
-  --alt2-color: black;
-  --alt3-color: rgb(136, 136, 136);
-
-  /* fonts */
-  --heading-font: "Poppins";
-  --paragraph-font: "Rajdhani", Helvetica, sans-serif;
-
-  /* colors from palette */
-  --headline-color-on-white: var(--primary-color);  /* headlines on a white background */ 
-  --headline-color-on-color: var(--alt1-color); /* headlines on a colored background */ 
-  --paragraph-color-on-white: var(--secondary-color); /* paragraph text on a white background */ 
-  --paragraph-color-on-color: var(--alt1-color); /* paragraph text on a colored background */ 
-  --paragraph-background-color: var(--tertiary-color);
-  --nav-link-color: var(--alt2-color);
-  --nav-background-color: var(--secondary-color);
-  --nav-hover-link-color: var(--alt1-color);
-  --nav-hover-background-color: var(--alt2-color);
-
-  /* Customized colors */
-  --background-coloration: var(--alt1-color);
-  --nav-hover: var(--alt3-color);
-}
-
 body {
-  margin: 0;
-  padding: 0;
-  background-color: var(--background-coloration);
-  font-family: var(--paragraph-font);
+    margin: 30px;
+    justify-content: center;
+    align-items: center;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
-div {
-  margin: 20px;
+h1, h2, p, li, ul {
+    font-family: sans-serif;
 }
-/* Nav */
-nav {
-  top: 0;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: var(--nav-background-color);
-  position:fixed;
-  width: 100%;
-}
-li {
-  float: left;
-}
-li a {
-  display: block;
-  color: var(--alt1-color);
-  padding: 14px 16px;
-  text-decoration: none;
-}
-li a:hover {
-  background-color: var(--nav-hover);
-}
-.active {
-  background-color: var(--primary-color);
-}
-/* style dropdown content */
-li a, .dropbtn {
-  display: inline-block;
-  color: var(--alt1-color);
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+img {
+    margin: auto 50px;
+    max-width: 100%;
+    justify-self: center;
 }
 
-li a:hover, .dropdown:hover .dropbtn {
-  background-color: var(--alt3-color);
+.first{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3,1fr);
+    max-height: 100vh;
+    grid-row: 1 span 1;
+    grid-column: 1/5;
+}
+.first h1 {
+    grid-column: 1/5;
+    justify-self: center;
+    align-self: center;
+    border-style: double;
+    padding: 50px 300px;
+}
+.first img {
+    grid-column: 1/3;
+    grid-row: 2/4;
+    max-height: 100%;
+}
+.first .intro {
+    grid-column: 3/5;
+    grid-row: 2;
+    padding: 50px;
+}
+.first .about {
+    grid-column: 3/5;
+    grid-row: 3;
+    padding: 50px;
 }
 
-li.dropdown {
-  display: inline-block;
+.second{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3,1fr);
+    max-height: 100vh;
+    grid-row: 2;
+    grid-column: 1/5;
+}
+.second h1 {
+    grid-column: 1/5;
+    justify-self: center;
+    align-self: center;
+    border-style: double;
+    padding: 50px 300px;
+}
+.second img {
+    grid-row: 2/4;
+    grid-column: 1/3;
+}
+.second .call {
+    grid-row: 2;
+    grid-column: 3/5;
+    padding: 50px;
+}
+.second .oregon {
+    grid-row: 3;
+    grid-column: 3/5;
+    padding: 50px;
 }
 
-.dropdown-content {
-  padding: 0;
-  margin: 0;
-  display: none;
-  position: absolute;
-  background-color: var(--alt1-color);
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+.fs {
+    grid-column: 1/5;
+    justify-self: center;
 }
 
-.dropdown-content a {
-  color: var(--alt2-color);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.dropdown-content a:hover {background-color: #d3d3d3;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-/* Site contents */
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--heading-font);
-}
-p {
-  font-weight: bold;
-}
-a {
-  font-weight: bold;
-  text-decoration: none;
-}
-
-
-.colors {
-  width: 100%;
-  min-width: 350px;
-  margin: 30px auto;
-  text-align: center;
-}
-.colors th {
-  background-color: #999;
-}
-.colors td{
-  width: 25%;
-  height: 3em;
-}
-.primary {
-  background-color: var(--primary-color);
-}
-.secondary {
-  background-color: var(--secondary-color);
-}
-.accent1 {
-  background-color: var(--accent1-color);
-}
-.accent2{
-  background-color: var(--accent2-color);
-}
-p.colored {
-  background-color: var(--paragraph-background-color);
-  color: var(--paragraph-color-on-color);
-}
-
-.topper {
-  height: 20px;
-}
-.booter {
-  height: 100px;
-}
-/* Footer */
-footer {
-  color: var(--alt1-color);
-  background-color: var(--nav-background-color);
-  bottom: 0;
-  width: auto;
-  padding: 20px;
-}
-footer a {
-  color: var(--alt1-color);
-}
-footer .social img {
-  height: 40px;
-  width: auto;
-  padding: 10px;
-  margin: 0 10px;
-  border-style: solid;
-  border-radius: 10px;
-}
-.information {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-.address {
-  display: flex;
-  height: auto;
-  grid-area: 1/1/1/1;
-}
-.phone {
-  display: flex;
-  grid-area: 2/1/2/1;
-}
-.email {
-  display: flex;
-  grid-area: 3/1/3/1;
-}
-.about {
-  grid-area: 1/2/3/2;
-  padding: 3vw;
-}
-.social {
-  padding-left: 30px;
-}
-
-/* DO NOT MESS WITH THIS */
-.icon {
-  margin-left: 10vw;
-  margin-top: auto;
-  margin-bottom: auto;
-  margin-right: 2vw;
-  border-radius: 50%;
-  border-style: solid;
-  font-size: 2em;
-  padding: 10px;
-}
-.address div, .phone p, .email p {
-  margin-top: auto;
-  margin-bottom: auto;
+/* Mobile Version */
+@media screen and (max-width: 900px) {
+    body {
+        margin: 30px;
+        justify-content: center;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(5,1fr);
+    }
+    h1, h2, p, li, ul {
+        font-family: sans-serif;
+    }
+    img {
+        margin: auto 50px;
+        max-width: 100%;
+        justify-self: center;
+    }
+    
+    .first{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4,1fr);
+        max-height: 100vh;
+        grid-row: 1;
+        grid-column: 1/5;
+    }
+    .first h1 {
+        grid-column: 1/5;
+        text-align: center;
+        justify-self: center;
+        align-self: center;
+        border-style: double;
+        padding: 50px 100px;
+    }
+    .first img {
+        grid-column: 1/5;
+        grid-row: 2;
+        max-height: 100%;
+    }
+    .first .intro {
+        grid-column: 1/5;
+        grid-row: 3;
+        padding: 50px;
+    }
+    .first .about {
+        grid-column: 1/5;
+        grid-row: 4;
+        padding: 50px;
+    }
+    
+    .second{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(4,1fr);
+        max-height: 100vh;
+        grid-row: 3;
+        grid-column: 1/5;
+    }
+    .second h1 {
+        grid-column: 1/5;
+        text-align: center;
+        justify-self: center;
+        align-self: center;
+        border-style: double;
+        padding: 50px 100px;
+    }
+    .second img {
+        grid-row: 2;
+        grid-column: 1/5;
+    }
+    .second .call {
+        grid-row: 3;
+        grid-column: 1/5;
+        padding: 50px;
+    }
+    .second .oregon {
+        grid-row: 4;
+        grid-column: 1/5;
+        padding: 50px;
+    }
+    
+    .fs {
+        grid-row: 5;
+        grid-column: 1/5;
+        justify-self: center;
+    }
 }
