--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -8,6 +8,7 @@
 
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- <link rel="stylesheet" href="/style.css"> -->
 
 </head>
 
