--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -7,8 +7,12 @@
     <title>{{ title | default("My HTMX Site") }}</title>
 
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    
+    {% if eleventy.env.runMode == "serve" %}
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- <link rel="stylesheet" href="/style.css"> -->
+    {% else %}
+    <link rel="stylesheet" href="/style.css">
+    {% endif %}
 
 </head>
 
