Refactor layout and improve post linking
Moved header and footer loading to base layout for consistency. Updated home page to wrap post titles in links for better navigation. Renamed 'first-post.md' to 'cosy-isnt-it.md' and updated its content. Commented out unused filter dropdown in header.

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -7,15 +7,19 @@
     <title>{{ title | default("My HTMX Site") }}</title>
 
     <script src="https://unpkg.com/htmx.org@1.9.10"></script>
-    
     <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
 
 </head>
+
+<header hx-get="/header.html" hx-trigger="load" hx-swap="outerHTML"></header>
+
 
 <body class="bg-slate-100 font-sans">
 
     {{ content | safe }}
 
 </body>
+
+<footer hx-get="/footer.html" hx-trigger="load" hx-swap="outerHTML"></footer>
 
 </html>
