--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -2,7 +2,7 @@
     <div id="socials" class="flex justify-center space-x-4">
         <a href="https://www.linkedin.com/in/daniel-checketts" target="_blank" rel="noopener">Linkedin</a>
         <a href="https://github.com/dchecketts">GitHub</a>
-        <a href="#">Contact</a>
+        <a href="/contact/">Contact</a>
     </div>
     <p class="mt-4">&copy; 2025 My Portfolio. All rights reserved.</p>
 </footer>
